# banking-system

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test_db.py
app/common/: enums.py  ids.py  money.py  musk.py  randoms.py  ranodoms.py  settings.py
app/core/: constants.py  exceptions.py
app/domain/: accounts.py  repository.py
app/domain/customer/: models.py
app/domain/ledger/: enums.py  exceptions.py  models.py  services.py
app/domain/transaction/: enums.py  models.py  service.py
app/domain/transfer/: enums.py  models.py  service.py
app/forex/: __init__.py  rates.py
app/infrastructure/database/: base.py  config.py  session.py
app/infrastructure/models/: account.py  customer.py  ledger_account.py
migrations/: env.py
migrations/versions/: c4d8740b3437_initial_schema.py
tests/: test_account_number.py  test_constants.py  test_ids.py  test_ledger.py  test_money.py  test_repositories.py  test_transactions.py  test_transfer.py
