[project]
name = "UnityBankX"
version = "0.1.0"
description = "UnityBankX — Multi-Currency Fintech Platform Backend"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "cryptography>=44.0.0",
    # Validation & Serialization
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    # HTTP client (for external FX provider)
    "httpx>=0.28.0",
    # Structured logging
    "structlog>=24.4.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # Utilities
    "python-multipart>=0.0.18",
    "uuid6>=2025.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "sqlalchemy[mypy]>=2.0.36",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "ERA", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
ignore = ["S101", "TRY003", "PLR0913", "S105", "S106", "ARG002", "E501", "PLR2004", "PT011", "PGH003", "RUF012", "PLC0415", "PLW0603", "PERF401", "A001", "SIM105", "S110", "ARG004", "TRY301", "ERA001", "TRY300", "S104", "ARG001", "N818", "S112", "TC", "TC003", "SLF001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
